--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <span class="inheritance feature">Inheritance</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="cookiejar" class="hideContent">
                     <li>
                         Organizes and lists inspirational thoughts by topic. Two numbers indicate the total number of each thought and the number of thoughts already looked at.
@@ -191,7 +191,7 @@
                 <span class="inheritance feature">Inheritance</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="haunted" class="hideContent">
                     <li>
                         Once opened, this app has a welcome screen that explains the game. As the sole inheritor of your uncle's fortune, you must find the key hidden deep within the haunted house. Choose where to explore.
@@ -214,7 +214,7 @@
                 <span class="oop feature">OOP</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="lemonade" class="hideContent">
                     <li>
                         Once opened, this app has a welcome screen that explains the game. As the sole inheritor of your uncle's fortune, you must find the key hidden deep within the haunted house. Choose where to explore.
@@ -239,7 +239,7 @@
                 <span class="inheritance feature">Inheritance</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="sudoku" class="hideContent">
                     <li>
                         Sacrament planner with CRUD functionality. Users can select assign speakers for the meeting.
@@ -265,7 +265,7 @@
                 <span class="coupling cplusplus feature">Loose Coupling</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="sudoku" class="hideContent">
                     <li>
                         Sudoku puzzle solver. Menu options include: show, display board, edit square, exit.
@@ -318,7 +318,7 @@
                 <span class="sass feature">SASS</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul class="hideContent">
                     <li>Single page, CSS only.</li>
                     <li>This was a fun team assignment. We chose camping as our theme and divided up the work. In addition to 
@@ -351,7 +351,7 @@
                 <span class="local feature">LocalStorage</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul class="hideContent">
                     <li>
                         JavaScript app allows adding items to a list, removing them, marking them as complete. Also includes filtering. 
@@ -400,7 +400,7 @@
                 <span class="rest feature">REST API</span>                
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="commerce" class="hideContent">
                     <li>
                         Fictitious site for a local chamber of commerce. In addition to meeting 
@@ -453,7 +453,7 @@
                 <span class="rest feature">REST API</span>                   
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul id="weather" class="hideContent">
                     <li>
                         Responsive site with pages for individual cities. Current weather conditions
@@ -495,7 +495,7 @@
                 <span class="mobile feature">Responsive</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul class="hideContent">
                     <li>
                         Responsive three page site includes a form. 
@@ -538,7 +538,7 @@
                 <span class="mobile feature">Responsive</span>
             </div>
             <div class="details">
-                <h2>Project Outcomes</h2>
+                <h2>Overview</h2>
                 <ul class="hideContent">
                     <li>
                         Responsive two page site includes custom color scheme and typography.
