--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                 <a href="https://github.com/blackadder-git/CookieJar">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://github.com/blackadder-git/CookieJar"><img src="screenshots/planner.png" alt="Screenshot of Cookie Jar built with Kotlin"></a>
+                <a href="https://github.com/blackadder-git/CookieJar"><img src="screenshots/jar600.png" alt="Screenshot of Cookie Jar built with Kotlin"></a>
             </div>
             <div class="features">
                 <span class="kotlin feature">Kotlin</span>
