--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         .kotlin, .java {
             background-color: #27e524;
         }
-        .firebase, .gc {
+        .firebase, .compose, .room {
             background-color: #27e524;
         }
         .mvc, .oop {
@@ -145,6 +145,30 @@
 
     <main id="projects">
 
+        <section>
+            <h2>Monster Mix</h2>
+            <h3>Personal</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/MonsterMix">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/CookieJar"><img src="screenshots/monster600.png" alt="Screenshot of Monster Mix built with Kotlin"></a>
+            </div>
+            <div class="features">
+                <span class="kotlin feature">Kotlin</span>
+                <span class="oop feature">OOP</span>
+                <span class="compose feature">Compose</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="monstermix" class="hideContent">
+                    <li>
+                        tap on part of the screen to create a new monster
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
         <section>
             <h2>Cookie Jar</h2>
             <h3>CS310: Applied Programming</h3>
@@ -230,7 +254,7 @@
                 <a href="">Source</a>
             </div>
             <div class="screenshot">
-                <a href=""><img src="screenshots/planner.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
+                <a href=""><img src="screenshots/planner600.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
             </div>
             <div class="features">
                 <span class="csharp feature">C#</span>
@@ -257,7 +281,7 @@
                 <a href="https://blackadder-git.github.io/byui/c++/sudoku/sudoku_gold.cpp">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku.png" alt="Screenshot of c++ sudoku solver screen created for intro to programming"></a>
+                <a href="https://blackadder-git.github.io/byui/c++/sudoku/index.html"><img src="screenshots/sudoku600.png" alt="Screenshot of c++ sudoku solver screen created for intro to programming"></a>
             </div>
             <div class="features">
                 <span class="c++ cplusplus feature">C++</span>
