--- a/index.html
+++ b/index.html
@@ -168,6 +168,33 @@
                 </ul>
             </div>
         </section>
+
+        <section>
+            <h2>Life Goals</h2>
+            <h3>Personal</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/Goals">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/Goals"><img src="screenshots/goals600.png" alt="Screenshot of Goals built with Kotlin"></a>
+            </div>
+            <div class="features">
+                <span class="kotlin feature">Kotlin</span>
+                <span class="oop feature">OOP</span>
+                <span class="inheritance feature">Inheritance</span>
+                <span class="encapsulation feature">Encapsulation</span>
+                <span class="abstraction feature">Abstraction</span>
+                <span class="room feature">ROOM</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="goals" class="hideContent">
+                    <li>
+                        tap on part of the screen to create a new monster
+                    </li>
+                </ul>
+            </div>
+        </section>
         
         <section>
             <h2>Cookie Jar</h2>
