--- a/index.html
+++ b/index.html
@@ -170,8 +170,34 @@
         </section>
 
         <section>
+            <h2>HelloUnity</h2>
+            <h3>CS310: Applied Programming</h3>
+            <div class="site-plan">
+                <a href="https://github.com/blackadder-git/Unity">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://github.com/blackadder-git/Unity"><img src="screenshots/goals600.png" alt="Screenshot of game built Unity"></a>
+            </div>
+            <div class="features">
+                <span class="csharp feature">C#</span>
+                <span class="unity feature">Unity</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="unity" class="hideContent">
+                    <li>
+                        My attempt at building a 3D pac-man game. Currently you can run through the maze and jump. When you eat the yellow pellets, they make a sound.
+                    </li>
+                    <li>
+                        Next step is to add ghosts, fruit and new levels
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
+        <section>
             <h2>Life Goals</h2>
-            <h3>Personal</h3>
+            <h3>CS310: Applied Programming</h3>
             <div class="site-plan">
                 <a href="https://github.com/blackadder-git/Goals">Source</a>
             </div>
