--- a/index.html
+++ b/index.html
@@ -88,6 +88,9 @@
         .kotlin, .java {
             background-color: #27e524;
         }
+        .unity {
+            background-color: #27e524;
+        }
         .firebase, .compose, .room {
             background-color: #27e524;
         }
@@ -176,7 +179,7 @@
                 <a href="https://github.com/blackadder-git/Unity">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://github.com/blackadder-git/Unity"><img src="screenshots/goals600.png" alt="Screenshot of game built Unity"></a>
+                <a href="https://github.com/blackadder-git/Unity"><img src="screenshots/unity600.png" alt="Screenshot of game built Unity"></a>
             </div>
             <div class="features">
                 <span class="csharp feature">C#</span>
