--- a/index.html
+++ b/index.html
@@ -166,7 +166,10 @@
                 <h2>Overview</h2>
                 <ul id="monstermix" class="hideContent">
                     <li>
-                        tap on part of the screen to create a new monster
+                        Tap on part of the screen to create a new monster.
+                    </li>
+                    <li>
+                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
                     </li>
                 </ul>
             </div>
@@ -219,7 +222,13 @@
                 <h2>Overview</h2>
                 <ul id="goals" class="hideContent">
                     <li>
-                        tap on part of the screen to create a new monster
+                        CRUD functinality to add new tasks in one of four categories (Spiritual, Social, Intellectual, Physical).
+                    </li>
+                    <li>
+                        Tasks can also be updated or deleted.
+                    </li>
+                    <li>
+                        This was my first attempt at learning ROOM.
                     </li>
                 </ul>
             </div>
