--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <a href="https://github.com/blackadder-git/MonsterMix">Source</a>
             </div>
             <div class="screenshot">
-                <a href="https://github.com/blackadder-git/CookieJar"><img src="screenshots/monster600.png" alt="Screenshot of Monster Mix built with Kotlin"></a>
+                <a href="https://github.com/blackadder-git/MonsterMix"><img src="screenshots/monster600.png" alt="Screenshot of Monster Mix built with Kotlin"></a>
             </div>
             <div class="features">
                 <span class="kotlin feature">Kotlin</span>
@@ -293,7 +293,7 @@
             <h2>Lemonade Stand</h2>
             <h3>CS310: Applied Programming</h3>
             <div class="site-plan">
-                <a href="https://github.com/blackadder-git/Lemonade">Source</a>
+                <!--a href="https://github.com/blackadder-git/Lemonade"-->Source<!--/a-->
             </div>
             <div class="screenshot">
                 <a href="https://github.com/blackadder-git/Lemonade"><img src="screenshots/planner.png" alt="Screenshot of Lemonade Stand built with Kotlin"></a>
@@ -316,7 +316,7 @@
             <h2>Sacrament Planner</h2>
             <h3>CS365: .NET Software Development</h3>
             <div class="site-plan">
-                <a href="">Source</a>
+                <a href="https://github.com/blackadder-git/Planner">Source</a>
             </div>
             <div class="screenshot">
                 <a href=""><img src="screenshots/planner600.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
