--- a/index.html
+++ b/index.html
@@ -176,6 +176,35 @@
         </section>
 
         <section>
+            <h2>Treasure Hunt</h2>
+            <h3>Personal</h3>
+            <div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/treasure/">Source</a>
+            </div>
+            <div class="screenshot">
+                <a href="https://blackadder-git.github.io/byui/treasure/"><img src="screenshots/treasure600.png" alt="Screenshot of Treasure Hunt"></a>
+            </div>
+            <div class="features">
+                <span class="html feature">HTML5</span> 
+                <span class="css feature">CSS</span> 
+                <span class="js feature">JavaScript</span> 
+                <span class="mobile feature">Responsive</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="treasure" class="hideContent">
+                    <li>
+                        I built this to celebrate <a href="https://en.wikipedia.org/wiki/International_Talk_Like_a_Pirate_Day" target="_blank">September 19th</a>
+                    </li>
+                    <li>
+                        I hid seven skeleton keys around the house with which contained QR codes. When my daughters scanned a key, they were taken to a 
+                        <a href="https://blackadder-git.github.io/byui/treasure/monkey.html" target>page</a> a video to watch or puzzle to solve in order to open the lock.
+                    </li>
+                </ul>
+            </div>
+        </section>
+        
+        <section>
             <h2>HelloUnity</h2>
             <h3>CS310: Applied Programming</h3>
             <div class="site-plan">
