--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                 <!--a href="https://github.com/blackadder-git/Lemonade"-->Source<!--/a-->
             </div>
             <div class="screenshot">
-                <a href="https://github.com/blackadder-git/Lemonade"><img src="screenshots/planner.png" alt="Screenshot of Lemonade Stand built with Kotlin"></a>
+                <a href="https://github.com/blackadder-git/Lemonade"><img src="screenshots/lemonade600.png" alt="Screenshot of Lemonade Stand built with Kotlin"></a>
             </div>
             <div class="features">
                 <span class="kotlin feature">Kotlin</span>
