--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
         <section>
             <h2>Monster Mix</h2>
-            <h3>Personal</h3>
+            <h3>Personal: Halloween</h3>
             <div class="site-plan">
                 <a href="https://github.com/blackadder-git/MonsterMix">Source</a>
             </div>
@@ -177,7 +177,7 @@
 
         <section>
             <h2>Treasure Hunt</h2>
-            <h3>Personal</h3>
+            <h3>Personal: September 19th</h3>
             <div class="site-plan">
                 <a href="https://blackadder-git.github.io/byui/treasure/">Source</a>
             </div>
