--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
             <h2>Lemonade Stand</h2>
             <h3>CS310: Applied Programming</h3>
             <div class="site-plan">
-                <!--a href="https://github.com/blackadder-git/Lemonade"-->Source<!--/a-->
+                <a href="https://github.com/blackadder-git/Lemonade">Source</a>
             </div>
             <div class="screenshot">
                 <a href="https://github.com/blackadder-git/Lemonade"><img src="screenshots/lemonade600.png" alt="Screenshot of Lemonade Stand built with Kotlin"></a>
