--- a/index.html
+++ b/index.html
@@ -197,8 +197,8 @@
                         I built this to celebrate <a href="https://en.wikipedia.org/wiki/International_Talk_Like_a_Pirate_Day" target="_blank">September 19th</a>
                     </li>
                     <li>
-                        I hid seven skeleton keys around the house with which contained QR codes. When my daughters scanned a key, they were taken to a 
-                        <a href="https://blackadder-git.github.io/byui/treasure/monkey.html" target>page</a> a video to watch or puzzle to solve in order to open the lock.
+                        I hid seven skeleton keys around the house with QR codes. When my daughters scanned a key, they were taken to a 
+                        <a href="https://blackadder-git.github.io/byui/treasure/monkey.html" target>page</a> to watch a video or solve a puzzle in order to open the lock.
                     </li>
                 </ul>
             </div>
