--- a/wdd230/yeoldcrowsnest/stormcenter.html
+++ b/wdd230/yeoldcrowsnest/stormcenter.html
@@ -144,7 +144,7 @@
                     </label>
                 </fieldset>
 
-                <input name="submit" type="submit" value="Arrr, make yer report?">
+                <input name="submit" type="submit" value="Arrr, make yer report?" onclick="alert('frogtoast')">
             </form>
 
             <div class="placeholder contact">
