--- a/index.html
+++ b/index.html
@@ -335,7 +335,9 @@
                 <h2>Overview</h2>
                 <ul id="lemonade" class="hideContent">
                     <li>
-                        Once opened, this app has a welcome screen that explains the game. As the sole inheritor of your uncle's fortune, you must find the key hidden deep within the haunted house. Choose where to explore.
+                        After randomly forecasting the weather, this game prompts you for the number of cups of lemonade you want to make, price to sell and recipe to follow.
+                        The game then generates customers and uses logic to determine how many bought cups based on the actual weather, the price and how well the recipe you 
+                        followed matched their personal preference.
                     </li>
                 </ul>
             </div>
