--- a/index.html
+++ b/index.html
@@ -350,7 +350,7 @@
                 <a href="https://github.com/blackadder-git/Planner">Source</a>
             </div>
             <div class="screenshot">
-                <a href=""><img src="screenshots/planner600.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
+                <a href="https://github.com/blackadder-git/Planner"><img src="screenshots/planner600.png" alt="Screenshot of c# sacrament planner screen created for .NET"></a>
             </div>
             <div class="features">
                 <span class="csharp feature">C#</span>
