--- a/cse130/02week.html
+++ b/cse130/02week.html
@@ -47,7 +47,7 @@
 
     <div>
         <video controls="controls autoplay">
-            <source src="authenticate - run.mp4" type="video/mp4">
+            <source src="authenticate - live.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <h2>Testcases live (minute and a half)</h2>
