--- a/cse130/02week.html
+++ b/cse130/02week.html
@@ -42,7 +42,7 @@
             <source src="authenticate.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <h2>Testcases summary (under a minute)</h2>
+        <h2>⬆️ Summary Testcases (under a minute)</h2>
     </div>
 
     <div>
@@ -50,7 +50,7 @@
             <source src="authenticate - live.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
-        <h2>Testcases live (minute and a half)</h2>
+        <h2>⬆️ Live Testcases (minute and a half)</h2>
     </div>
 
 </body>
