--- a/index.html
+++ b/index.html
@@ -100,6 +100,10 @@
         .inheritance, .encapsulation, .abstraction, .polymorphism {
             background-color: #27e524;
         }
+	.photoshop, .illustrator, .indesign {
+            background-image: linear-gradient(to right, #171d22 , #4b5f6d);
+            color: #FFF;
+	}
         .site-plan {
             margin: 1em 0;
         }
@@ -147,6 +151,81 @@
     <h1>JC - Project Portfolio</h1>
 
     <main id="projects">
+
+       <section>
+            <h2>Advertisement</h2>
+            <h3>COMM130: Visual Media</h3>
+            <!--div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/firefly">Source</a>
+            </div-->
+            <div class="screenshot">
+                <a href="https://blackadder-git.github.io/byui/comm130/firefly.html"><img src="screenshots/firefly600.png" alt="Screenshot of firefly advertisement"></a>
+            </div>
+            <div class="features">
+                <span class="photoshop contrast repetition alignment proximity feature">Photoshop</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="firefly" class="hideContent">
+                    <li>
+                        Tap on part of the screen to create a new monster.
+                    </li>
+                    <li>
+                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>Magazine Spread</h2>
+            <h3>COMM130: Visual Media</h3>
+            <!--div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/magazine">Source</a>
+            </div-->
+            <div class="screenshot">
+                <a href="https://blackadder-git.github.io/byui/comm130/magazine.html"><img src="screenshots/magazine600.png" alt="Screenshot of magazine spread"></a>
+            </div>
+            <div class="features">
+                <span class="indesign contrast repetition alignment proximity feature">InDesign</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="magazine" class="hideContent">
+                    <li>
+                        Tap on part of the screen to create a new monster.
+                    </li>
+                    <li>
+                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <section>
+            <h2>Icon set</h2>
+            <h3>COMM130: Visual Media</h3>
+            <!--div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/burger">Source</a>
+            </div-->
+            <div class="screenshot">
+                <a href="https://blackadder-git.github.io/byui/comm130/burger.html"><img src="screenshots/burger600.png" alt="Screenshot of burger icons"></a>
+            </div>
+            <div class="features">
+                <span class="illustrator contrast repetition alignment proximity feature">Illustrator</span>
+            </div>
+            <div class="details">
+                <h2>Overview</h2>
+                <ul id="burger" class="hideContent">
+                    <li>
+                        Tap on part of the screen to create a new monster.
+                    </li>
+                    <li>
+                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                    </li>
+                </ul>
+            </div>
+        </section>
 
         <section>
             <h2>Monster Mix</h2>
