--- a/index.html
+++ b/index.html
@@ -162,7 +162,11 @@
                 <a href="https://blackadder-git.github.io/byui/comm130/firefly.html"><img src="screenshots/firefly600.png" alt="Screenshot of firefly advertisement"></a>
             </div>
             <div class="features">
-                <span class="photoshop contrast repetition alignment proximity feature">Photoshop</span>
+                <span class="photoshop feature">Photoshop</span>
+                <span class="contrast feature">Contrast</span>
+                <span class="repetition feature">Repetition</span>
+                <span class="alignment feature">Alignment</span>
+                <span class="proximity feature">Proximity</span>
             </div>
             <div class="details">
                 <h2>Overview</h2>
@@ -187,7 +191,11 @@
                 <a href="https://blackadder-git.github.io/byui/comm130/magazine.html"><img src="screenshots/magazine600.png" alt="Screenshot of magazine spread"></a>
             </div>
             <div class="features">
-                <span class="indesign contrast repetition alignment proximity feature">InDesign</span>
+                <span class="indesign feature">InDesign</span>
+                <span class="contrast feature">Contrast</span>
+                <span class="repetition feature">Repetition</span>
+                <span class="alignment feature">Alignment</span>
+                <span class="proximity feature">Proximity</span>
             </div>
             <div class="details">
                 <h2>Overview</h2>
@@ -212,7 +220,11 @@
                 <a href="https://blackadder-git.github.io/byui/comm130/burger.html"><img src="screenshots/burger600.png" alt="Screenshot of burger icons"></a>
             </div>
             <div class="features">
-                <span class="illustrator contrast repetition alignment proximity feature">Illustrator</span>
+                <span class="illustrator feature">Illustrator</span>
+                <span class="contrast feature">Contrast</span>
+                <span class="repetition feature">Repetition</span>
+                <span class="alignment feature">Alignment</span>
+                <span class="proximity feature">Proximity</span>
             </div>
             <div class="details">
                 <h2>Overview</h2>
