--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         .inheritance, .encapsulation, .abstraction, .polymorphism {
             background-color: #27e524;
         }
-	.photoshop, .illustrator, .indesign {
+	.photoshop, .illustrator, .indesign, .contrast, .repetition, .alignment, .proximity {
             background-image: linear-gradient(to right, #171d22 , #4b5f6d);
             color: #FFF;
 	}
