--- a/index.html
+++ b/index.html
@@ -151,13 +151,12 @@
     <h1>JC - Project Portfolio</h1>
 
     <main id="projects">
-
        <section>
-            <h2>Advertisement</h2>
+            <h2>Creative Ad</h2>
             <h3>COMM130: Visual Media</h3>
-            <!--div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/comm130/firefly">Source</a>
-            </div-->
+            <div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/CreativeAdReport.pdf">Report</a>
+            </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/comm130/firefly.html"><img src="screenshots/firefly600.png" alt="Screenshot of firefly advertisement"></a>
             </div>
@@ -184,9 +183,9 @@
         <section>
             <h2>Magazine Spread</h2>
             <h3>COMM130: Visual Media</h3>
-            <!--div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/comm130/magazine">Source</a>
-            </div-->
+            <div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/MagazineReport.pdf">Report</a>
+            </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/comm130/magazine.html"><img src="screenshots/magazine600.png" alt="Screenshot of magazine spread"></a>
             </div>
@@ -213,9 +212,9 @@
         <section>
             <h2>Icon set</h2>
             <h3>COMM130: Visual Media</h3>
-            <!--div class="site-plan">
-                <a href="https://blackadder-git.github.io/byui/comm130/burger">Source</a>
-            </div-->
+            <div class="site-plan">
+                <a href="https://blackadder-git.github.io/byui/comm130/IconReport.pdf">Report</a>
+            </div>
             <div class="screenshot">
                 <a href="https://blackadder-git.github.io/byui/comm130/burger.html"><img src="screenshots/burger600.png" alt="Screenshot of burger icons"></a>
             </div>
