--- a/index.html
+++ b/index.html
@@ -150,7 +150,6 @@
 <body>
     <h1>JC - Project Portfolio</h1>
 
-    <main id="projects">
        <section>
             <h2>Creative Ad</h2>
             <h3>COMM130: Visual Media</h3>
@@ -171,10 +170,10 @@
                 <h2>Overview</h2>
                 <ul id="firefly" class="hideContent">
                     <li>
-                        Tap on part of the screen to create a new monster.
+                        Using Photoshop, blend 2+ images to communicate a symbolic concept. Include an original headline, 1-2 sentences of body copy, and a call to action.
                     </li>
                     <li>
-                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                        Incorporate principles of typography, color, photography into the design.
                     </li>
                 </ul>
             </div>
@@ -200,10 +199,10 @@
                 <h2>Overview</h2>
                 <ul id="magazine" class="hideContent">
                     <li>
-                        Tap on part of the screen to create a new monster.
+                        3 pages, 600+ words, 2+ column layout, 1+ pull quotes, 2+ images, consistent headings and body copy, contrasting typography.
                     </li>
                     <li>
-                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                        For this project, I learned to use InDesign.
                     </li>
                 </ul>
             </div>
@@ -229,15 +228,15 @@
                 <h2>Overview</h2>
                 <ul id="burger" class="hideContent">
                     <li>
-                        Tap on part of the screen to create a new monster.
+                        Fun project. I got to design an icon set of my choosing with Adobe Illustrator.
                     </li>
                     <li>
-                        I built this as a proof of concept. My daughter provided the art. Next step is to improve on the drawings and add color.
+                        Each icon had to communicate a single idea without text, gradients, drop shadows or raster effects.
                     </li>
                 </ul>
             </div>
         </section>
-
+	
         <section>
             <h2>Monster Mix</h2>
             <h3>Personal: Halloween</h3>
