--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
                         Using Photoshop, blend 2+ images to communicate a symbolic concept. Include an original headline, 1-2 sentences of body copy, and a call to action.
                     </li>
                     <li>
-                        Incorporate principles of typography, color, photography into the design.
+                        Incorporated principles of typography, color, photography into the design.
                     </li>
                 </ul>
             </div>
