--- a/index.html
+++ b/index.html
@@ -150,6 +150,8 @@
 <body>
     <h1>JC - Project Portfolio</h1>
 
+    <main id="projects">
+
        <section>
             <h2>Creative Ad</h2>
             <h3>COMM130: Visual Media</h3>
@@ -173,7 +175,7 @@
                         Using Photoshop, blend 2+ images to communicate a symbolic concept. Include an original headline, 1-2 sentences of body copy, and a call to action.
                     </li>
                     <li>
-                        Incorporated principles of typography, color, photography into the design.
+                        Incorporate principles of typography, color, photography into the design.
                     </li>
                 </ul>
             </div>
@@ -236,7 +238,7 @@
                 </ul>
             </div>
         </section>
-	
+
         <section>
             <h2>Monster Mix</h2>
             <h3>Personal: Halloween</h3>
