--- a/index.html
+++ b/index.html
@@ -172,10 +172,10 @@
                 <h2>Overview</h2>
                 <ul id="firefly" class="hideContent">
                     <li>
-                        Using Photoshop, blend 2+ images to communicate a symbolic concept. Include an original headline, 1-2 sentences of body copy, and a call to action.
+                        Used Photoshop to blend 2+ images. Included an original headline, 1-2 sentences of body copy, and a call to action as part of this symbolic concept.
                     </li>
                     <li>
-                        Incorporate principles of typography, color, photography into the design.
+                        Incorporated principles of typography, color, photography into the design.
                     </li>
                 </ul>
             </div>
