--- a/comm130/firefly.html
+++ b/comm130/firefly.html
@@ -42,13 +42,13 @@
     <h1>Creative Ad</h1>
 
     <div>
-	<img src="images/ad.png" alt="">
+	<img src="images/ad.webp" alt="">
     </div>
     <div>
-	<img src="images/ad2.png" alt="">
+	<img src="images/ad2.webp" alt="">
     </div>
     <div>
-	<img src="images/firefly.png" alt="">
+	<img src="images/firefly.webp" alt="">
     </div>
 
 </body>
