--- a/comm130/magazine.html
+++ b/comm130/magazine.html
@@ -42,7 +42,7 @@
     <h1>Magazine Spread</h1>
 
     <div>
-	<img src="images/magazine_fullv4.png" alt="">
+	<img src="images/magazine_fullv4.webp" alt="">
     </div>
 
 </body>
