--- a/megamind/megamind.html
+++ b/megamind/megamind.html
@@ -39,7 +39,7 @@
     <h1>Filmtuber: Megamente</h1>
     <div>
         <video controls="controls autoplay">
-            <source src="megamind.ogg" type="video/ogg">
+            <source src="megamind.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
