--- a/cse130/08week.html
+++ b/cse130/08week.html
@@ -40,7 +40,7 @@
     </style>
 </head>
 <body>
-    <h1>Advanced Search</h1>
+    <h1>Advanced Sort</h1>
     <div>
         <video controls="controls autoplay">
             <source src="sort.mp4" type="video/mp4">
