--- a/cse131/09week.html
+++ b/cse131/09week.html
@@ -43,7 +43,7 @@
     <h1>Sub-List Sort</h1>
     <div>
         <video controls="controls autoplay">
-            <source src="sort-sub-array.mp4" type="video/mp4">
+            <source src="sub-list-sort.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
