--- a/megamind/megamind.html
+++ b/megamind/megamind.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Filmtuber: Megamente</title>
+    <title>Timemanagement</title>
     <meta name="description" content="">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css">
@@ -36,10 +36,22 @@
     </style>
 </head>
 <body>
-    <h1>Filmtuber: Megamente</h1>
+    <h1>Time Management</h1>
     <div>
         <video controls="controls autoplay">
-            <source src="megamind.mp4" type="video/mp4">
+            <source src="Time1.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div>
+        <video controls="controls autoplay">
+            <source src="Time2.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+    <div>
+        <video controls="controls autoplay">
+            <source src="Time3.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
